--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -33,3 +33,46 @@
     text-align: center;
     font-size: 1.567rem;
 }
+.center
+{
+    text-align: center;
+}
+form
+{
+    display: flex;
+    flex-direction: column;
+    border-radius: 6px;
+   
+}
+
+input[type=email],[type=text], textarea
+{
+    width: 350px;
+    margin-bottom: 10px;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+}
+
+.cont{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    margin-top: 5rem;
+}
+
+button
+{
+    margin-top: 15px;
+    background-color: #3f4279;
+    padding: 10px;
+    border-radius: 6px;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+button:hover
+{
+    opacity: 0.9;
+}
